mac ukaz